// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform can accept className 1`] = `
<div
  className="test"
  style={
    Object {
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
      "willChange": "transform",
    }
  }
/>
`;

exports[`Transform can accept custom styles 1`] = `
<div
  className={undefined}
  style={
    Object {
      "background": "black",
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
      "willChange": "transform",
    }
  }
/>
`;

exports[`Transform renders 1`] = `
<div
  className={undefined}
  style={
    Object {
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
      "willChange": "transform",
    }
  }
/>
`;

exports[`Transform sets finish 1`] = `
<div
  className={undefined}
  style={
    Object {
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
      "willChange": "transform",
    }
  }
/>
`;

exports[`Transform sets start 1`] = `
<div
  className={undefined}
  style={
    Object {
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
      "willChange": "transform",
    }
  }
/>
`;

exports[`Transform sets transitionDelay with delay prop 1`] = `
<div
  className={undefined}
  style={
    Object {
      "transform": "none",
      "transitionDelay": "1000ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
      "willChange": "transform",
    }
  }
/>
`;

exports[`Transform sets transitionDuration with duration prop 1`] = `
<div
  className={undefined}
  style={
    Object {
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "1000ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
      "willChange": "transform",
    }
  }
/>
`;

exports[`Transform sets transitionTimingFunction with timingFn prop 1`] = `
<div
  className={undefined}
  style={
    Object {
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease-in-out",
      "willChange": "transform",
    }
  }
/>
`;
